package Observers;

import Server.*;
import States.*;

public interface MyDisplay {
    public void display();
}
