package Observers;

import Server.*;
import States.*;

public interface MyObserver {
    // public void checkState(State S_classroom, State C_classroom, State
    // L_classroom);
    public void checkState();
}
